# speech-recognition-bot

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  config.py  rules.py
src/commands/: __init__.py  recognizer.py  start.py
src/utils/: __init__.py  download.py  recognize.py
