[tool.poetry]
name = "Speech Recognition Bot"
version = "0.1.0"
description = "Telegram bot that can recognize any voice message."
authors = ["vladislavkovalskyi <v.darknesssb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mubble = "^1.2.3"
envparse = "^0.2.0"
speechrecognition = "^3.10.4"
pydub = "^0.25.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
